# pygomx

./: .gitignore  Containerfile.debian  README.txt
.github/workflows/: build.yaml
libmxclient/: API.md  callback.go  go.mod  go.sum  mxclientlib.go
libmxclient/mxapi/: discover.go  login.go
libmxclient/mxclient/: client.go
libmxclient/mxutils/: generic.go  utils.go
mxsmal/: README.txt  pyproject.toml
mxsmal/src/mxsmal/: app.py  bot.py  config.py
mxsmal/src/mxsmal/smalsetup/: e2eebot.py  e2eesetup.py  smalsetup.py
pygomx/: .gitignore  README.txt  build_ffi.py  libmxclient.def  pyproject.toml  setup.py
pygomx-deps/: README.txt  pyproject.toml
pygomx-module/: MANIFEST.in  Makefile  README.txt  build_ffi.py  pyproject.toml  requirements.txt  setup.py
pygomx/src/pygomx/: __init__.py  apiv0.py  client.py  cliv0.py  errors.py  util.py
pygomx/src/pygomx/simple/: __init__.py  client.py
smal/: pyproject.toml
smal/src/demobot/: demobot.py
smal/src/pymxutils/mxutils/: accountinfo.py  discoverhs.py  whoami.py
smal/src/smal/: bot.py  pygomx.py
