[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "pygomx-deps"
version = "0.0.1"
requires-python = ">=3.10"
description = "python dependencies for pygomx"
license = "AGPL-3.0-only"
readme = "README.txt"

dependencies = ["asyncio>=4.0.0", "cffi>=2.0.0"]

[project.urls]
homepage = "https://codeberg.org/saces/pygomx"
