[build-system]
requires = ["setuptools>=80", "cffi>=2.0.0", "calver"]
build-backend = "setuptools.build_meta"

[project]
name = "pygomx"
dynamic = ["version"]
requires-python = ">=3.10"
description = "a golang matrix high level client library with c-bindings for python"
license = "AGPL-3.0-only"
readme = "README.txt"
keywords = ["matrix", "2.0", "bot", "client", "library"]

dependencies = ["asyncio", "cffi>=2.0.0"]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries"
]

[project.urls]
codeberg = "https://codeberg.org/saces/pygomx"
c-base = "https://code.c-base.org/saces/pygomx"

[tool.setuptools.package-dir]
"pygomx" = "src/pygomx"

# Use delvewheel on windows
[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path . -w {dest_dir} {wheel}"
